# qhv-cli

./: .gitignore  AGENTS.md  LEARNED_LESSONS.md  README.md  pyproject.toml
docs/: troubleshooting.md
src/qhv/: __init__.py  __main__.py  bootstrap.py  cli.py  host_checks.py  images.py  models.py  qemu.py  state.py
tests/: test_bootstrap.py  test_cli_ports.py  test_host_checks.py  test_images.py  test_qemu.py  test_state.py  test_vm_lifecycle.py
